--- a/style.css
+++ b/style.css
@@ -4,20 +4,23 @@
 }
 
 body {
-  background-image: url('images/bg-pattern-desktop.svg');
-  background-size: cover;
+  background-image: linear-gradient( 135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
   font-family: 'Josefin+Sans', sans+serif;
   margin: 0;
 }
 .container{
   display: flex;
   min-height: 100vh;
- 
 }
-
+.inner-container{
+  max-width: 450px;
+  margin: auto;
+}
 .left{
+  background-image: url('images/bg-pattern-desktop.svg');
+  background-size: cover;
   width: 60%;
-  padding: 0 40px;
+  padding: 0 40px 40px;
 }
 .right{
   width: 40%;
@@ -38,6 +41,17 @@ h1{
   text-transform: uppercase;
   letter-spacing: 15px;
   line-height: 1.1;
+  margin-bottom: 0;
+  transform: translateX(-100%);
+  animation: comein 0.5s ease forwards;
+}
+
+@keyframes comein {
+
+  to{
+    transform: translateX(0);
+  }
+  
 }
 
 h1 span{
@@ -47,11 +61,24 @@ h1 span{
 p{
   color: hsl(0, 36%, 70%);
   line-height: 26px;
+  margin: 30px 0;
+  transform: translateX(100%);
+  opacity: 0;
+  animation: comeinright 0.5s ease forwards;
+}
+@keyframes comeinright {
+
+  to{
+    opacity: 1;
+    transform: translateX(0);
+  }
   
 }
 
 form{
- position: relative;
+  position: relative;
+  transform: translateX(-100%);
+  animation: comein 0.5s ease forwards;
 }
 
 form.error input{
@@ -59,7 +86,6 @@ form.error input{
 }
 
 input{
-
   background-color: transparent;
   border: 1px solid hsl(0, 36%, 70%);
   border-radius: 50px;
@@ -68,6 +94,14 @@ input{
   width: 100%;
   height: 55px;
 
+}
+input:focus, button-focus{
+  border-width: 2px;
+  box-shadow: 0px 0px 10px hsla(0, 36%, 70%, 0.5);
+  outline:none;
+}
+input::placeholder{
+  color:hsl(0, 36%, 70%);
 }
 .error-icon{
   position: absolute;
@@ -94,17 +128,40 @@ button{
 
 button:hover{
  opacity: 0.6;
-
-
 }
 
 small{
   color: hsl(0, 93%, 68%);
-  display: block;
   margin-top: 15px;
   margin-left: 30px;
   display: none;
 }
+
 form.error small{
   display: block;
+}
+.bg-mobile{
+  display: none;
+}
+@media screen and (max-width: 600px){
+  .logo{
+    margin: 30px 0;
+    width: 100px;
+  }
+  .bg-mobile{
+    display: block;
+    width: 100%;
+    margin-left: -40px;
+    margin-right: -40px;
+    width: calc(100% + 80px);
+  }
+  .left{
+    width: 100%
+  }
+  .right{
+    display: none;
+  }
+  h1{
+    font-size: 40px;
+  }
 }
