--- a/style.css
+++ b/style.css
@@ -164,4 +164,15 @@ form.error small{
   h1{
     font-size: 40px;
   }
+  .error-icon{
+    right: 82px;
+    width: 20px;
+    font-size: 14px;
+  }
+  button{
+    width: 80px;
+  }
+  button:active{
+    outline: none;
+  }
 }
